apps/rocketchat/resources/deployment-mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-db
  labels:
    app: rocketchat
    component: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat
      component: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rocketchat
        component: db
    spec:
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: rocketchat-db
          image: docker.io/mongo:4.0
          command:
            - /bin/sh
            - -c
            - >
              mongod --bind_ip 0.0.0.0 --port 27017 --smallfiles --oplogSize 128
              --replSet rs0 --storageEngine=mmapv1
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: rocketchat-data
              mountPath: /data/db
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - >
                  mongo --eval "rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'localhost:27017'}]})"
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 3
      volumes:
        - name: rocketchat-data
          persistentVolumeClaim:
            claimName: rocketchat-data-claim
