apps/rocketchat/resources/service-rocketchat.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rocketchat
